estilos tarjetas version movil lista

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   position: relative; /* Asegura que los elementos dentro tengan una referencia de posición */
 }
 
-img.bg-card {
+.bg-card {
   width: 245px;
   height: 125px;
   border-radius: 5px;
@@ -20,11 +20,25 @@ img.bg-card {
   left: 50%; /* Ajusta la posición horizontalmente al centro del contenedor */
   transform: translate(-50%, -50%);
 }
-
-.bg-card.front {
-  position: absolute;
+.frontal {
+  width: 245px;
+  height: 125px;
+  position: relative;
   top: 100%;
   left: 40%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.card.front {
+  width: 245px;
+  height: 125px;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 
@@ -39,21 +53,71 @@ p {
 
 .circulo {
   position: absolute;
-  top: 78%; /* Ajusta la posición verticalmente */
-  left: 10%; /* Ajusta la posición horizontalmente */
+  grid-column: 1/2;
+  grid-row: 1/2;
   width: 20px;
   height: 20px;
   border-radius: 50%;
   background-color: white;
+  justify-self: start;
+  align-self: center;
+  margin-left: 12px;
 }
 
 .circulo.dos {
   position: absolute;
-  top: 80%;
-  left: 18%;
+  grid-column: 1/2;
+  grid-row: 1/2;
   width: 10px;
   height: 10px;
   border-radius: 50%;
   background-color: transparent;
   border: 1px solid white;
+  justify-self: end;
+  align-self: center;
+}
+
+.credit_card_number {
+  font-size: 20px;
+  color: lightgray;
+  grid-row: 2 / 3;
+  grid-column: 1 / 3;
+  margin-left: 2px;
+}
+
+.nombre_fecha_expiracion {
+  position: absolute;
+  top: 115%;
+  left: 34%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+  color: lightgray;
+  border: 1px solid black;
+  width: 100px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between; /* Coloca los elementos <p> en los extremos */
+  align-items: center; /* Alinea verticalmente los elementos <p> */
+}
+
+.nombre {
+  position: absolute;
+    font-size: 15px;
+    color: lightgray;
+    grid-row: 3 / 3;
+    grid-column: 1 / 3;
+    align-self: center;
+    justify-self: start;
+    margin-left: 12px;
+}
+
+.fecha_expiracion{
+   position: absolute;
+    font-size: 15px;
+    color: lightgray;
+    grid-row: 3 / 3;
+    grid-column: 4;
+    align-self: center;
+    justify-self: start;
+    margin-left: 12px; 
 }
