--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,18 @@
   box-sizing: border-box;
 }
 
+.bgmobile {
+  width: 100%;
+  height: 160px;
+}
+
 .container {
   position: relative;
   width: 350px;
   height: 150px;
-  top: -180px;
+  top: -150px;
   left: 20px;
 }
-
-.bgmobile {
-  width: 100%;
-  height: 200px;
-}
-
 .bg-card {
   width: 245px;
   height: 125px;
@@ -29,106 +28,71 @@
   left: 58%; /* Ajusta la posición horizontalmente al centro del contenedor */
   transform: translate(-50%, -50%);
 }
-.frontal {
-  width: 245px;
-  height: 125px;
-  position: relative;
-  top: 87%;
-  left: 40%;
-  transform: translate(-50%, -50%);
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-}
 
 .card.front {
-  width: 245px;
-  height: 125px;
-  border-radius: 5px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+ width: 245px;
+    height: 125px;
+    border-radius: 5px;
+    position: absolute;
+    top: 70%;
+    left: 40%;
+    transform: translate(-50%, -50%);
 }
 
 p {
   position: absolute;
   top: 41%; /* Ajusta la posición verticalmente */
-  left: 79%; /* Ajusta la posición horizontalmente */
+  left: 82%; /* Ajusta la posición horizontalmente */
   transform: translate(-50%, -50%);
-  font-size: 10px;
-  color: lightgray;
+  font-size: 12px;
+  color: white;
 }
 
 .circulo {
   position: absolute;
-  grid-column: 1/2;
-  grid-row: 1/2;
+  top: 32%;
+  left: 8%;
   width: 20px;
   height: 20px;
   border-radius: 50%;
   background-color: white;
-  justify-self: start;
-  align-self: center;
-  margin-left: 12px;
+  
 }
 
 .circulo.dos {
   position: absolute;
-  grid-column: 1/2;
-  grid-row: 1/2;
+  top: 36%;
+  left: 17%;
   width: 10px;
   height: 10px;
   border-radius: 50%;
   background-color: transparent;
   border: 1px solid white;
-  justify-self: end;
-  align-self: center;
 }
 
 .credit_card_number {
   font-size: 20px;
   color: lightgray;
-  grid-row: 2 / 3;
-  grid-column: 1 / 3;
-  margin-left: 2px;
+  top: 75%;
+  left: 33%;
 }
 
-.nombre_fecha_expiracion {
-  position: absolute;
-  top: 115%;
-  left: 34%;
-  transform: translate(-50%, -50%);
-  font-size: 20px;
-  color: lightgray;
-  border: 1px solid black;
-  width: 100px;
-  height: 50px;
-  display: flex;
-  justify-content: space-between; /* Coloca los elementos <p> en los extremos */
-  align-items: center; /* Alinea verticalmente los elementos <p> */
-}
+
 
 .nombre {
   position: absolute;
   font-size: 15px;
   color: lightgray;
-  grid-row: 3 / 3;
-  grid-column: 1 / 3;
-  align-self: center;
-  justify-self: start;
-  margin-left: 12px;
+  top: 92%;
+  left: 8%;
 }
 
 .fecha_expiracion {
   position: absolute;
   font-size: 15px;
   color: lightgray;
-  grid-row: 3 / 3;
-  grid-column: 4;
-  align-self: center;
-  justify-self: start;
-  margin-left: 12px;
+  top: 92%;
+  left: 60%;
 }
 
 @media (min-width: 375px) {
@@ -186,7 +150,7 @@ p {
     border-radius: 50%;
     background-color: white;
     top: 205%;
-    left: 21%;
+    left: 25%;
   }
 
   .circulo.dos {
@@ -197,13 +161,13 @@ p {
     background-color: transparent;
     border: 1px solid white;
     top: 194%;
-    left: 30%;
+    left: 35%;
   }
 
   .credit_card_number {
     position: relative;
     top: 240%;
-    left: 73%;
+    left: 75%;
   }
 
   .nombre {
@@ -211,7 +175,7 @@ p {
     font-size: 15px;
     color: lightgray;
     top: 250%;
-    left: 20%;
+    left: 25%;
   }
 
   .fecha_expiracion {
@@ -219,7 +183,7 @@ p {
     font-size: 15px;
     color: lightgray;
     top: 250%;
-    left: 70%;
+    left: 75%;
   }
   .formulario {
     max-width: 600px;
